inicio da aula 1

--- a/_posts/2016-5-14-Aula-1.md
+++ b/_posts/2016-5-14-Aula-1.md
@@ -5,4 +5,27 @@ category: bdg
 ---
 
 
-### Teste Aula 1
+### PostGIS: o que é?
+
+O PostGIS é a extensão espacial do Banco de Dados PostgreSQL que adiciona "capacidades espaciais" ao mesmo, permitindo que esse se torne um repositório de dados para os Sistemas de Informações Geográficas (SIG).
+
+<img src="{{ site.baseurl }}/images/aula1/img1.png" align="center">
+
+### Como criar um Banco de Dados Geográficos com o PostGIS?
+
+{% highlight bash linenos %}
+# Criando o Banco de Dados
+$ createdb gis
+# Acessando o Banco de Dados
+$ psql gis
+{% endhighlight %}
+
+{% highlight sql linenos %}
+-- Habilitando a extensão:
+CREATE EXTENSION postgis;
+{% endhighlight %}
+
+Também é possível habilitar a extensão através do PGAdmin III:
+
+<img src="{{ site.baseurl }}/images/aula1/img2.png" align="center">
+
