ajuste na pag bdg

--- a/_posts/2013-1-1-hello.md
+++ b/_posts/2013-1-1-hello.md
@@ -5,3 +5,22 @@ category: main
 ---
 
 Seja Bem vindo ao meu site pessoal
+
+
+
+```text
+
+         nome         |     area_km2     
+----------------------+------------------
+ Cachoeira dos Índios | 172.862523411658
+ Santa Inês           | 322.789414524441
+ Conceição            | 580.137143451526
+ São José de Piranhas | 679.578785745777
+ Cajazeiras           | 586.661698320619
+ Santarém             | 74.2495211131759
+ Bom Jesus            | 47.2351787716332
+ Santa Helena         |  209.77870171916
+ Monte Horebe         | 115.873072759276
+ Triunfo              | 224.120232683929
+
+```
