finaliza o primeiro post

--- a/_posts/2013-1-1-hello.md
+++ b/_posts/2013-1-1-hello.md
@@ -1,26 +1,74 @@
 ---
 layout: post
-title: Primeiro Post
+title: Python, Django e Pyenv no Ubuntu
 category: main
 ---
 
-Seja Bem vindo ao meu site pessoal
+### Como configurar um ambiente desenvolvimento Python no Ubuntu
 
+#### 1 - Instalação das dependências dp pyenv:
 
-
-```text
-
-         nome         |     area_km2     
-----------------------+------------------
- Cachoeira dos Índios | 172.862523411658
- Santa Inês           | 322.789414524441
- Conceição            | 580.137143451526
- São José de Piranhas | 679.578785745777
- Cajazeiras           | 586.661698320619
- Santarém             | 74.2495211131759
- Bom Jesus            | 47.2351787716332
- Santa Helena         |  209.77870171916
- Monte Horebe         | 115.873072759276
- Triunfo              | 224.120232683929
-
+```bash
+$ ~ sudo apt-get install -y make build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev
 ```
+
+#### 2 - Instalação do pyenv:
+
+```bash
+$ ~ curl -L https://raw.githubusercontent.com/yyuu/pyenv-installer/master/bin/pyenv-installer | bash
+```
+
+#### 3 - Configurando o arquivo ~/.bashrc:
+
+```bash
+$ cd ~
+$ nano .bashrc
+$ # adicione as linhas abaixo no final do arquivo:
+export PATH="/home/marcello/.pyenv/bin:$PATH"
+eval "$(pyenv init -)"
+eval "$(pyenv virtualenv-init -)"
+$ # por último, atualize o .bashrc com o comando:
+$ source .bashrc
+```
+
+#### 4 - Visualizando as versões instaladas do python:
+
+```bash
+$ ~ pyenv versions
+```
+
+#### 5 - Para instalar uma determinada versão (ex. python 3.5.0):
+
+```bash
+$ ~ pyenv install 3.5.0
+```
+
+#### 6 - Para mudar da versão do sistema para a versão instalada:
+
+```bash
+$ ~ pyenv global 3.5.0
+```
+
+e com o comando abaixo, é possível ver as versões disponíveis:
+
+```bash
+$ ~ pyenv versions
+```
+
+#### 7 - Instalação do PyCharm via apt-get (opcional):
+
+```bash
+$ ~ sudo add-apt-repository ppa:mystic-mirage/pycharm
+
+$ ~ sudo apt-get update
+
+$ ~ sudo apt-get install pycharm
+```
+
+#### REFERÊNCIAS:
+
+* [Pyenv](https://github.com/yyuu/pyenv-installer)
+
+* [Pyenv - Common build problems](https://github.com/yyuu/pyenv/wiki/Common-build-problems)
+
+* [How to Install PyCharm IDE in Ubuntu 14.04/15.04](http://ubuntuhandbook.org/index.php/2015/07/install-pycharm-ubuntu-1404)
