fim da aula 1 e inicio da aula 2

--- a/_posts/2015-5-14-Aula-2.md
+++ b/_posts/2015-5-14-Aula-2.md
@@ -1,56 +1,23 @@
 ---
 layout: post
-title: Aula 2
+title: Aula 2 - Criando Tabelas Espaciais
 category: bdg
 ---
 
 
-### Teste Aula 2
+Existem algumas formas de criar tabelas as espaciais, serão apresentadas aqui três delas:
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. At maxime eligendi voluptas dolorem omnis recusandae aliquam cumque voluptates aspernatur natus ab assumenda iure delectus, odit pariatur quidem maiores commodi sit.
 
----
-```sql
-CREATE TABLE terrain_points
-(
-  ogc_fid serial NOT NULL,
-  wkb_geometry geometry,
-  elevation double precision,
-  CONSTRAINT terrain_points_pk PRIMARY KEY (ogc_fid),
-  CONSTRAINT enforce_dims_wkb_geometry CHECK (st_ndims(wkb_geometry) = 3),
-  CONSTRAINT enforce_geotype_wkb_geometry CHECK (geometrytype(wkb_geometry) = 'POINT'::text OR wkb_geometry IS NULL),
-  CONSTRAINT enforce_srid_wkb_geometry CHECK (st_srid(wkb_geometry) = 3725)
-)
-WITH (
-  OIDS=FALSE
-);
-```
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, aliquid! Fugiat asperiores vel velit autem vero iure maxime officia impedit. Tenetur eveniet rerum nesciunt sequi, id debitis inventore possimus rem?
+#### Adicionando a coluna geométrica diretamente no CREATE TABLE:
 
 
 {% highlight sql linenos %}
-CREATE TABLE terrain_points
+CREATE TABLE ponto_coletado
 (
-  ogc_fid serial NOT NULL,
-  wkb_geometry geometry,
-  elevation double precision,
-  CONSTRAINT terrain_points_pk PRIMARY KEY (ogc_fid),
-  CONSTRAINT enforce_dims_wkb_geometry CHECK (st_ndims(wkb_geometry) = 3),
-  CONSTRAINT enforce_geotype_wkb_geometry CHECK (geometrytype(wkb_geometry) = 'POINT'::text OR wkb_geometry IS NULL),
-  CONSTRAINT enforce_srid_wkb_geometry CHECK (st_srid(wkb_geometry) = 3725)
-)
-WITH (
-  OIDS=FALSE
+  gid serial PRIMARY KEY,
+  nome varchar(60),
+  observacao varchar(255),
+  -- adicionando a coluna geométrica:
+  geom geometry(POINT, 4674)
 );
-ALTER TABLE terrain_points OWNER TO postgres;
-
--- Index: terrain_points_geom_idx
-
--- DROP INDEX terrain_points_geom_idx;
-
-CREATE INDEX terrain_points_geom_idx
-  ON terrain_points
-  USING gist
-  (wkb_geometry);
 {% endhighlight %}
