--- a/_posts/2016-5-14-Aula-1.md
+++ b/_posts/2016-5-14-Aula-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Aula 1
+title: Aula 1 - Introdução
 category: bdg
 ---
 
@@ -9,9 +9,11 @@ category: bdg
 
 O PostGIS é a extensão espacial do Banco de Dados PostgreSQL que adiciona "capacidades espaciais" ao mesmo, permitindo que esse se torne um repositório de dados para os Sistemas de Informações Geográficas (SIG).
 
-<img src="{{ site.baseurl }}/images/aula1/img1.png" align="center">
+<img src="{{ site.baseurl }}/images/aula1/img1.png" class="center-image">
 
 ### Como criar um Banco de Dados Geográficos com o PostGIS?
+
+#### Através do Terminal (Linux):
 
 {% highlight bash linenos %}
 # Criando o Banco de Dados
@@ -25,7 +27,59 @@ $ psql gis
 CREATE EXTENSION postgis;
 {% endhighlight %}
 
-Também é possível habilitar a extensão através do PGAdmin III:
 
-<img src="{{ site.baseurl }}/images/aula1/img2.png" align="center">
+#### Através do PGAdmin III:
+
+Clique com o botão direito em **Databases** e escolha **New Database...**:
+
+<img src="{{ site.baseurl }}/images/aula1/img3.png" height="68%" width="68%" class="center-image">
+
+Em sequida, crie um banco de dados convencional:
+
+<img src="{{ site.baseurl }}/images/aula1/img4.png" class="center-image" height="78%" width="78%">
+
+Abra o **Query Builder** e execute a query abaixo:
+
+<img src="{{ site.baseurl }}/images/aula1/img2.png" class="center-image" height="78%" width="78%">
+
+Para verificar a versão do PostGIS instalada, utilize a query:
+
+{% highlight sql linenos %}
+-- Versão do PostGIS:
+SELECT postgis_full_version();
+{% endhighlight %}
+
+Volte para a janela principal do **PGAdmin III** e verifique se foram criados os seguintes elementos:
+
+* Funções (mais de 1.000)
+* Tabela **spatial_ref_sys**
+* Triggers (2)
+* Views (4)
+
+Como mostra a figura abaixo:
+
+<img src="{{ site.baseurl }}/images/aula1/img5.png" class="center-image" height="60%" width="60%">
+
+
+[Ir para a Aula 2]({{ site.baseurl }}/Aula-2/)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
