fim da aula 1 e inicio da aula 2 - ajuste

--- a/_posts/2016-5-14-Aula-1.md
+++ b/_posts/2016-5-14-Aula-1.md
@@ -61,7 +61,9 @@ Como mostra a figura abaixo:
 <img src="{{ site.baseurl }}/images/aula1/img5.png" class="center-image" height="60%" width="60%">
 
 
-[Ir para a Aula 2]({{ site.baseurl }}/Aula-2/)
+Finalizamos aqui a nossa primeira aula, onde aprendemos a criar um banco de dados geográfico.
+
+Acesse aqui o link da [Aula 2]({{ site.baseurl }}/Aula-2/)
 
 
 
