ajuste na aula 2

--- a/_posts/2015-5-14-Aula-2.md
+++ b/_posts/2015-5-14-Aula-2.md
@@ -1,23 +1,134 @@
 ---
 layout: post
-title: Aula 2 - Criando Tabelas Espaciais
+title: Aula 2 - Criação Tabelas Espaciais
 category: bdg
 ---
 
 
-Existem algumas formas de criar tabelas as espaciais, serão apresentadas aqui três delas:
+Existem diferentes formas de criar tabelas espaciais no PostGIS, serão apresentadas aqui duas delas:
 
+### 1 - Criando Tabelas Espaciais:
 
-#### Adicionando a coluna geométrica diretamente no CREATE TABLE:
+#### a) Adicionando a coluna geométrica diretamente no CREATE TABLE:
 
 
 {% highlight sql linenos %}
 CREATE TABLE ponto_coletado
 (
-  gid serial PRIMARY KEY,
-  nome varchar(60),
-  observacao varchar(255),
-  -- adicionando a coluna geométrica:
-  geom geometry(POINT, 4674)
+	gid serial PRIMARY KEY,
+	nome varchar(60),
+	observacao varchar(255),
+	-- adicionando a coluna geométrica:
+	-- geometrty('tipo de geometria', SRID):
+	geom geometry('POINT', 4674)
 );
 {% endhighlight %}
+
+
+#### Tipos de Geometria:
+
+Os tipos de geometria suportados pelo PostGIS são:
+
+
+<img src="{{ site.baseurl }}/images/aula2/img1.png" class="center-image" height="100%" width="100%">
+
+#### Representação das geometrias em Well Known Text - WKT:
+
+```sql
+POINT(0 0)
+LINESTRING(0 0,1 1,1 2)
+POLYGON((0 0,4 0,4 4,0 4,0 0),(1 1, 2 1, 2 2, 1 2,1 1))
+MULTIPOINT((0 0),(1 2))
+MULTILINESTRING((0 0,1 1,1 2),(2 3,3 2,5 4))
+MULTIPOLYGON(((0 0,4 0,4 4,0 4,0 0),(1 1,2 1,2 2,1 2,1 1)),((-1 -1,-1 -2,-2 -2,-2 -1,-1 -1)))
+GEOMETRYCOLLECTION(POINT(2 3),LINESTRING(2 3,3 4))
+```
+
+#### Spatial Reference System Identifier - SRID
+
+O **SRID** é um código que corresponde a um sistema de referência espacial.
+
+Toda geometria armazenada no PostGIS possui um identificador de referência espacial ou “SRID”.
+
+Os valores de  **SRID ≠ -1** indicam que os dados estão associados a um sistema de referência.
+
+Para encontrar maiores detalhes sobre SRID, acesse o site: [http://spatialreference.org/](http://spatialreference.org/).
+
+Alguns Exemplos de SRID:
+
+* SIRGAS2000 LAT / LONG = 4674
+* WGS-84 LAT / LONG = 4326
+* SIRGAS / UTM zone 24S = 31984
+* SIRGAS / UTM zone 25S = 31985
+
+
+#### b) Adicionando através da função AddGeometryColumn( ):
+
+{% highlight sql linenos %}
+CREATE TABLE poste
+(
+	id serial PRIMARY KEY,
+	altura numeric(8,2),
+	material varchar(120)
+);
+-- Adicionando a coluna geométrica do tipo ponto:
+SELECT AddGeometryColumn(
+	'public', -- nome do schema
+	'poste', -- nome da tabela
+	'geom', -- nome da coluna a ser adicionada na tabela
+	4674, -- SRID
+	'POINT', -- tipo de geometria
+	2 -- dimensão da tabela (2D ou 3D)
+);
+{% endhighlight %}
+
+### 2 - Conversão de arquivos shapefile através do comando shp2pgsql:
+
+O comando **shp2pgsql** permite a conversão de shapefiles em arquivos SQL, sua sintaxe básica é a seguinte:
+
+```
+shp2pgsql -s <SRID> 
+	  -W <Encoding>
+	  <caminho-até-o-shapefile>
+	  <nome-da-tabela> >
+	  <arquivo_sql_gerado.sql>
+```
+
+Exemplo (Windows):
+
+
+```
+C:\Arquivos de programas\PostgreSQL\9.5\bin\shp2pgsql.exe 
+-s 4674 
+–W "LATIN1"
+C:\temp\municipios_base.shp
+municipios > 
+C:\temp\municipios.sql
+```
+
+### 3 - Conversão de arquivos shapefile através do plugin PostGIS shapefile and dbf loader:
+
+Este plugin fica disponível no PGAdmin III após a instalação do PostGIS, como mostra a figura abaixo:
+
+<img src="{{ site.baseurl }}/images/aula2/img2.png" class="center-image" height="80%" width="80%">
+
+Para importar um shapefile, devem ser preenchidos os seguintes campos:
+
+* Nome da tabela (1);
+
+* Sistema de Referência de Coordenadas (2);
+
+* E se necessário, a codificação da tabela dbf do shapefile (3).
+
+<img src="{{ site.baseurl }}/images/aula2/img3.png" class="center-image" height="80%" width="80%">
+
+* Além da Codificação, estão disponíveis outras opções nesta janela(4):
+
+<img src="{{ site.baseurl }}/images/aula2/img4.png" class="center-image" height="60%" width="60%">
+
+
+
+
+
+
+
