ajuste na aula 2 - 3

--- a/_posts/2015-5-14-Aula-2.md
+++ b/_posts/2015-5-14-Aula-2.md
@@ -116,7 +116,7 @@ Para importar um shapefile, devem ser preenchidos os seguintes campos:
 
 * Nome da tabela (1);
 
-* Sistema de Referência de Coordenadas (2);
+* SRID (2);
 
 * E se necessário, a codificação da tabela dbf do shapefile (3).
 
