ajuste nos nomes

--- a/_posts/2014-3-3-index.md
+++ b/_posts/2014-3-3-index.md
@@ -4,5 +4,7 @@ category: index
 ---
 
 <div style="text-align: center;">
-<p><img src="{{ site.baseurl }}/images/myworld.jpeg" height="480" width="480"></p>
+	<p>
+		<img src="{{ site.baseurl }}/images/myworld.jpeg" height="480" width="480">
+	</p>
 </div>
