--- a/_posts/2016-5-14-topico-1.md
+++ b/_posts/2016-5-14-topico-1.md
@@ -63,7 +63,7 @@ Como mostra a figura abaixo:
 
 Finalizamos aqui a nossa primeira aula, onde aprendemos a criar um banco de dados geográfico.
 
-Acesse aqui o link da [Aula 2]({{ site.baseurl }}/Aula-2/).
+Acesse aqui o link do [Tópico 2]({{ site.baseurl }}/topico-2/).
 
 
 
