ajuste no titulo

--- a/_posts/2015-5-14-topico-2.md
+++ b/_posts/2015-5-14-topico-2.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 2 - Criação Tabelas Espaciais
+title: 2 - Criação de Tabelas Espaciais
 category: bdg
 ---
 
 
 Existem diferentes formas de criar tabelas espaciais no PostGIS, serão apresentadas aqui duas delas:
 
-### 1 - Criando Tabelas Espaciais:
+### 1 - Criando as Tabelas Espaciais:
 
 #### a) Adicionando a coluna geométrica diretamente no CREATE TABLE:
 
