--- a/_posts/2015-12-01-topico-1.md
+++ b/_posts/2015-12-01-topico-1.md
@@ -61,7 +61,7 @@ Como mostra a figura abaixo:
 <img src="{{ site.baseurl }}/images/aula1/img5.png" class="center-image" height="60%" width="60%">
 
 
-Finalizamos aqui a nossa primeira aula, onde aprendemos a criar um banco de dados geográfico.
+Finalizamos aqui o nosso primeiro tópico, onde aprendemos a criar um banco de dados geográfico.
 
 Acesse aqui o link do [Tópico 2]({{ site.baseurl }}/topico-2/).
 
