--- a/_posts/2015-11-28-topico-3.md
+++ b/_posts/2015-11-28-topico-3.md
@@ -7,7 +7,7 @@ published: true
 
 Neste tópico serão apresentados exemplos de inserção de dados em tabelas espaciais, bem como a utilização da função ST_GeomFromText() que permitem esta ação.
 
-#### Utilizando a função ST_GeomFromText(text WKT, integer SRID):
+### Utilizando a função ST_GeomFromText(text WKT, integer SRID):
 
 
 
@@ -52,3 +52,40 @@ INSERT INTO adutora (nome_adutora, geom) VALUES
 {% endhighlight %}
 
 <p class="warning">Muito cuidado para não esquecer de definir o SRID na criação da tabela e de utilizá-lo no INSERT.</p>
+
+### Como eu vejo os dados inseridos?
+
+É possível verificar os dados que foram inseridos na tabela **sede** através da query abaixo:
+
+{% highlight sql linenos %}
+SELECT * FROM sede;
+{% endhighlight %}
+
+Resultado:
+
+```
+gid  |  nome_sede   |                        geom                        
+-----+--------------+----------------------------------------------------
+   1 | Aparecida    | 01010000204212000089D2DEE00B0B43C0D9CEF753E3251BC0
+   2 | São Domingos | 0101000020421200000000000000F842C034A2B437F8421BC0
+```
+Entretanto as coordenadas são exibidas no formato hexadecimal WKB o que praticamente torna impossível a leitura.
+
+Entretanto, a função **ST_AsText(geom)** permite que o usuário visualize o resultado no formato WKT, como mostra o exemplo a seguir:
+
+{% highlight sql linenos %}
+select gid, nome_sede, ST_Astext(geom) from sede;
+{% endhighlight %}
+
+Resultado:
+
+```
+ gid |  nome_sede   |        st_astext        
+-----+--------------+-------------------------
+   1 | Aparecida    | POINT(-38.0863 -6.787)
+   2 | São Domingos | POINT(-37.9375 -6.8154)
+```
+
+
+
+
