--- a/_posts/2015-11-28-topico-3.md
+++ b/_posts/2015-11-28-topico-3.md
@@ -71,7 +71,7 @@ gid  |  nome_sede   |                        geom
 ```
 Entretanto as coordenadas são exibidas no formato hexadecimal WKB o que praticamente torna impossível a leitura.
 
-Entretanto, a função **ST_AsText(geom)** permite que o usuário visualize o resultado no formato WKT, como mostra o exemplo a seguir:
+A função **ST_AsText(geom)** permite que o usuário visualize o resultado no formato WKT, como mostra o exemplo a seguir:
 
 {% highlight sql linenos %}
 select gid, nome_sede, ST_Astext(geom) from sede;
